--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Esthar Healish  - Professional Portfolio</title>
+     <title>Janani - Professional Portfolio</title>
      <link rel="stylesheet" href="style.css">
  </head>
  <body>
      <div class="portfolio-wrapper">
-         <h1 class="portfolio-name">Ayswariya</h1>
+         <h1 class="portfolio-name">Janani</h1>
          <h2 class="portfolio-tagline">Aspiring Web developer </h2>
  
          <section class="personal-info">
              <h3>Personal Details</h3>
              <ul>
-                 <li class="portfolio-fathername">Father’s Name:Raja</li>
-                 <li class="portfolio-dob">Date of Birth: 18-05-2006</li>
-                 <li class="portfolio-email">Email: ayswariyariya549@gmail.com</li>
-                 <li class="portfolio-phone">Phone: 8190019981</li>
-                 <li class="portfolio-address">Address: ponneri </li>
+                 <li class="portfolio-fathername">Father’s Name:Bhuvaneswaran</li>
+                 <li class="portfolio-dob">Date of Birth: 06.12.2005</li>
+                 <li class="portfolio-email">Email: jjanani105@gmail.com</li>
+                 <li class="portfolio-phone">Phone: 9345559641</li>
+                 <li class="portfolio-address">Address: chennai </li>
              </ul>
          </section>
  
          <section class="education-info">
              <h3>Education</h3>
              <ul>
-                 <li class="portfolio-college">College: Valla pt lee Chengalvaraya Nacker arts and science college </li>
+                 <li class="portfolio-college">College: Valla pt lee Chengalvaraya Naicker arts and science college </li>
                  <li class="portfolio-degree">Degree: Bsc</li>
-                 <li class="portfolio-school12">12th School: Jai Gopal garodia girls higher secondary school </li>
-                 <li class="portfolio-school10">10th School: Jai Gopal garodia girls higher secondary school  </li>
+                 <li class="portfolio-school12">12th School: Chennai girls higher secondary school  </li>
+                 <li class="portfolio-school10">10th School: Chennai girls higher secondary school   </li>
              </ul>
          </section>
  
